added a bunch of jQuery UI stuff to get drag-and-drop to work. also, drag and drop is now implemented!

--- a/partials/dashboard.html
+++ b/partials/dashboard.html
@@ -36,7 +36,7 @@
       </div>
       
       
-      <ul id="campaign_list" class="object_list">
+      <ul id="campaign_list" class="object_list" ui-sortable>
         
         <li ng-repeat="campaign in activeCampaignList" ng-class="{selected : selected_campaigns.some(campaign.id)}">
           
