--- a/partials/campaign_info.html
+++ b/partials/campaign_info.html
@@ -1,5 +1,5 @@
 <header>
-  <button ng-click="toggleSidebar('left')" class="btn left">menu</button>
+  <button ng-click="toggleSidebar('left')" class="btn icon left"><i class="icon-menu"></i></button>
   <button ng-click="toggleSidebar('right')" class="btn right"> . . . </button>
   <h2 ng-bind="editCampaign.title"></h2>
   <div class="dropdown closed">
