--- a/partials/main_header.html
+++ b/partials/main_header.html
@@ -1,2 +1,2 @@
-<button ui-event="{click : 'toggleSidebar('left')'}" class="btn right">menu</button>
+<button ui-event="{click : 'toggleSidebar('left')'}" class="btn right"><i class="icon-menu"></i></button>
 <h1>{{title}}</h1>
