--- a/partials/settings.html
+++ b/partials/settings.html
@@ -1,5 +1,5 @@
 <header>
-  <button ng-click="toggleSidebar('right')" class="btn left">menu</button>
+  <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
   <h1 ng-bind="title"></h1>
 </header>
 
