--- a/partials/campaign_reward_info.html
+++ b/partials/campaign_reward_info.html
@@ -1,5 +1,5 @@
-<header>
-  <a href="#/campaign/{{campaignId}}/rewards" class="btn left">back</a>
+<header class="app_header">
+  <a href="#/campaign/{{campaignId}}/rewards" class="btn icon left"><i class="icon-left-open"></i>back</a>
   <h1>{{title}}</h1>
 </header>
 
