--- a/partials/history.html
+++ b/partials/history.html
@@ -1,5 +1,5 @@
-<header>
-  <button ng-click=toggleSidebar('right') class="btn left"><i class="icon-menu"></i></button>
+<header class="app_header">
+  <button ng-click=toggleSidebar('right') class="btn icon left"><i class="icon-menu"></i></button>
   <h1>Fdbk History</h1>
 </header>
 <div class="scroller_wrapper  with_header_padding">
