--- a/partials/index.html
+++ b/partials/index.html
@@ -1,4 +1,4 @@
-<header>
+<header class="app_header">
   <input type="text" name="search" ng-model="search_query" />
 </header>
 <div class="scroller_wrapper  with_header_padding">
