--- a/partials/rewards.html
+++ b/partials/rewards.html
@@ -1,6 +1,6 @@
 <div class="animation_wrapper">
-  <header>
-    <button ng-click=toggleSidebar('right') class="btn left"><i class="icon-menu"></i></button>
+  <header class="app_header">
+    <button ng-click=toggleSidebar('right') class="btn icon left"><i class="icon-menu"></i></button>
     <button ng-click="toggleEditMode()" class="btn right" ng-switch on="edit_mode">
       <span ng-switch-when="false">edit</span>
       <span ng-switch-when="true">done</span>
