--- a/partials/settings.html
+++ b/partials/settings.html
@@ -1,4 +1,4 @@
-<header>
+<header class="app_header">
   <button ng-click="toggleSidebar('right')" class="btn icon left"><i class="icon-menu"></i></button>
   <h1 ng-bind="title"></h1>
 </header>
