--- a/partials/campaign_rewards.html
+++ b/partials/campaign_rewards.html
@@ -1,7 +1,7 @@
 <div class="animation_wrapper">
-  <header>
-    <a href="#/campaign/{{campaignId}}/instances" class="btn left">back</a>
-    <button class="btn right" ng-click="toggleSidebar('left')"> . . . </button>
+  <header class="app_header">
+    <a href="#/campaign/{{campaignId}}/instances" class="btn icon left"><i class="icon-left-open"></i>back</a>
+    <button class="btn icon right" ng-click="toggleSidebar('left')"> . . . </button>
     <h1 ng-bind="title"></h1>
   </header>
   
