--- a/css/app.css
+++ b/css/app.css
@@ -893,6 +893,13 @@ fieldset.padded {
   height: 20px;
 }
 
+.new_counter {
+  background-color: #8cb0d9;
+  padding: 4px 8px;
+  border-radius: 2px;
+  color: rgba(255, 255, 255, 0.61);
+}
+
 .object_list li {
   background-color: #ffffff;
   margin: 0;
@@ -1321,4 +1328,29 @@ animation-name: bounceInDown;
 .bounceIn-enter.bounceIn-enter-active,
 .bounceIn-leave {
 
+}
+
+.control_panel {
+  z-index: 1000;
+  bottom: -360px;
+  right: -130px;
+  padding: 10px 10px 10px 40px;
+  background-color: rgba(0, 0, 0, 0.68);
+  display: inline;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.51);
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.49);
+}
+
+.control_panel button {
+  background-color: rgba(0, 0, 0, 0.74);
+  color: rgba(255, 255, 255, 0.72);
+  padding: 4px 10px;
+  border-radius: 4px;
+  font-weight: 200;
+  border-style: none;
+}
+
+.control_panel:active {
+  -moz-transform: scale(1.5 );
 }
